--- a/bower.json
+++ b/bower.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "bootstrap": "3.0.0",
     "jquery": "2.0.3",
-    "angular": "1.1.5",
-    "angular-resource": "1.1.5",
-    "angular-route": "1.1.5",
-    "font-awesome": "3.2.1"
+    "angular": "1.2.0",
+    "angular-route": "1.2.0",
+    "font-awesome": "3.2.1",
+    "angular-fire": "0.3.1"
   },
   "ignore": [
     "**/.*",
