--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -1,6 +1,3 @@
-- title: Piter United 
-  link: https://plus.google.com/u/0/communities/108851235934496354072
-
 - title: SMART management
 - title: Agile Piter
 - title: IT talk
@@ -19,4 +16,6 @@
 - title: SPb Technical Writers
 - title: UXSpb
 - title: SPb Startup
+- title: SPb WordPress
+- title: MODX Community
 - title: + стать участником
