comleated_landing_fix1

--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -1,21 +1,62 @@
 - title: SMART management
+  link: https://plus.google.com/u/0/communities/108809460896106613736
+
 - title: Agile Piter
+  link: https://plus.google.com/u/0/communities/112264824472767454602
+
 - title: IT talk
+  link: http://it-talk.dataart.ru/
+
 - title: SPb Community of Analysts
+  link: http://vk.com/spb_analytics
+
 - title: IT HR
+  link: /
+
 - title: DevOps-40
+  link: http://www.meetup.com/DevOps-40/
+
 - title: SPb Frontend
+  link: https://plus.google.com/u/0/communities/104754387486747286577
+
 - title: SPb Ruby User Group
+  link: https://plus.google.com/u/0/communities/117927540789820622012
+
 - title: SPb Python User Group
+  link: https://plus.google.com/u/0/communities/107328406287050920928
+
 - title: Clojure Russia
+  link: https://plus.google.com/communities/114227952963737516047
+
 - title: SPb Lisp Users
+  link: http://vk.com/lisp.users
+
 - title: SPb PostgreSQL User Group
+  link: /
+
 - title: SPb Linux User Group
+  link: https://plus.google.com/communities/109619119969254890213
+
 - title: Erlang Russia
+  link:
+
 - title: SPb SQA Group
+  link: http://sqagroup.spb.ru/
+
 - title: SPb Technical Writers
+  link: https://plus.google.com/u/0/communities/111110772662436773783
+
 - title: UXSpb
+  link: http://ux-spb.ru/
+
 - title: SPb Startup
+  link: https://www.facebook.com/groups/pitervc/
+
 - title: SPb WordPress
+  link: http://wpspb.org/
+
 - title: MODX Community
-- title: + стать участником
+  link: http://community.modx-cms.ru/
+
+- title: + добавить свое сообщество
+  link: mailto:piterunited@gmail.com
