--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -13,6 +13,11 @@
   desc: 
   logo: /itgm/img/hor.png
 
+- title: LoftBlog
+  link: http://loftblog.ru/
+  desc: 
+  logo: /itgm/img/loftblog.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
