--- a/_data/communities.yml
+++ b/_data/communities.yml
@@ -24,7 +24,7 @@
 
 - title: SPb Frontend
   members:
-  link: https://plus.google.com/u/0/communities/104754387486747286577
+  link: http://vk.com/spb_frontend
   desc: Сообщество front-end разработчиков
   logo: img/frontend.jpg 
 
