--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -17,7 +17,7 @@
   link: http://www.meetup.com/DevOps-40/
 
 - title: SPb Frontend
-  link: https://plus.google.com/u/0/communities/104754387486747286577
+  link: http://vk.com/spb_frontend
 
 - title: SPb Ruby User Group
   link: https://plus.google.com/u/0/communities/117927540789820622012
