--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -38,7 +38,7 @@
   link: https://plus.google.com/communities/109619119969254890213
 
 - title: Erlang Russia
-  link:
+  link: https://groups.google.com/forum/#!forum/erlang-russian
 
 - title: SPb SQA Group
   link: http://sqagroup.spb.ru/
