--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -18,6 +18,16 @@
   desc: 
   logo: /itgm/img/loftblog.png
 
+- title: ProfsoUX
+  link: http://profsoux.ru/
+  desc: 
+  logo: /itgm/img/pux.png
+
+- title: UMI
+  link: http://www.umi-cms.ru/
+  desc: 
+  logo: /itgm/img/umicms.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
