--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -6,30 +6,66 @@
 
 - title: IT talk
   link: http://it-talk.dataart.ru/
+  schedule:
+
+    "19:00" :
+      speaker : Александр Суевалов
+      work_place :  DataArt
+      theme : Frontend. Keep yourself up to date
+    "20:00" :
+      speaker : Максим Шульга
+      work_place : Код безопасности
+      theme : Импотека или как перестать залезать в долги
+    "21:00" :
+      speaker : Евгений Ефимов
+      work_place : DataArt
+      theme : Sick Systems. Как работа уничтожает нас
+  #  "22:00" :
+  #    speaker : 
+  #    work_place : 
+  #    theme : 
 
 - title: SPb Community of Analysts
   link: http://vk.com/spb_analytics
-  #schedule:
+  schedule:
   
-  #  "19:00" : 
-  #    speaker : Роман Беляковский
-  #    work_place : Git in Sky 
-  #    theme : Введение в Ansible
-  #  "20:00" : 
-  #    speaker : Андрей Овчаров
-  #    work_place : am.ru
-  #    theme : Деплой приложений на сотни хостов
-  #  "21:00" : 
-  #    speaker : Александр Чистяков
-  #    work_place : Git in Sky
-  #    theme : "Ansible: восемь месяцев вместе"
-  #  "22:00" : 
-  #    speaker : Яков Сироткин
-  #    work_place : Sidenis AG
-  #    theme : Миграция с PL/SQL на Java
+  #  "19:00" :
+  #    speaker : Александр Суевалов
+  #    work_place :  DataArt
+  #    theme : Frontend. Keep yourself up to date
+    "20:00" :
+      speaker : Михаил Рыжиков
+      work_place : WaveAccess
+      theme : Круглый стол. Бизнес и системный анализ в гибкой разработке.
+  #  "21:00" :
+  #    speaker : Евгений Ефимов
+  #    work_place : DataArt
+  #    theme : Sick Systems. Как работа уничтожает нас
+  #  "22:00" :
+  #    speaker : 
+  #    work_place : 
+  #    theme : 
 
 - title: IT HR
   link: /
+  schedule:
+
+    "19:00" :
+      speaker : Ирина Матвеева
+      work_place : 
+      theme : Постановка целей 4D
+    "20:00" :
+      speaker : Ирина Матвеева
+      work_place : 
+      theme : Постановка целей 4D
+    "21:00" :
+      speaker : Александр Зверев
+      work_place : 
+      theme : Performance Based Hiring. Эффективное взаимодействие IT и HR структур.
+    "22:00" :
+      speaker : Евгения Миклуш
+      work_place : 
+      theme : Система внутреннего обучения в IT - компании
 
 - title: DevOps-40
   link: http://www.meetup.com/DevOps-40/
@@ -63,6 +99,24 @@
 
 - title: SPb Technical Writers
   link: https://plus.google.com/u/0/communities/111110772662436773783
+  schedule:
+
+    "19:00" :
+      speaker : Людмила Арцыбашева
+      work_place :  
+      theme : Разрабатываем документацию с помошью DITA
+    "20:00" :
+      speaker : Спиридонов Роман
+      work_place : LoftBlog
+      theme : Мастер класс. Новые аудио-визуальные форматы технической документации.
+  #  "21:00" :
+  #    speaker : 
+  #    work_place : 
+  #    theme : 
+    "22:00" :
+      speaker : Станислав Салангин
+      work_place : SPb Tecnical Writers Community
+      theme : Круглый стол. Мы писали, мы писали ... - Прошлое, настоящее и будущее документации в IT.
 
 - title: UXSpb
   link: http://ux-spb.ru/
