--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -28,6 +28,11 @@
   desc: 
   logo: /itgm/img/umicms.png
 
+- title: Kechinov
+  link: http://mkechinov.ru/
+  desc: 
+  logo: /itgm/img/kechinov.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
