--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -33,6 +33,11 @@
   desc: 
   logo: /itgm/img/kechinov.png
 
+- title: Сын Программиста
+  link: http://progerson.ru
+  desc: 
+  logo: /itgm/img/progson.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
