new_partner_jetbrains

--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -28,6 +28,12 @@
   level: Серебряный партнер
   logo: /itgm/img/dins.png
 
+- title: JetBrains
+  link: https://www.jetbrains.com/
+  desc: 
+  level: Серебряный партнер
+  logo: /itgm/img/jetbrains.png
+
 - title: DataArt
   link: http://www.dataart.com/
   desc: 
