--- a/_data/itgm4_communities.yml
+++ b/_data/itgm4_communities.yml
@@ -293,7 +293,7 @@
   link: https://plus.google.com/u/0/communities/103652474826197512695
 
 - title: HackIoT
-  link: vk.com/hackIoT
+  link: http://vk.com/hackIoT
   schedule:
 
     "19:00" :
