--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -58,6 +58,12 @@
   level: Бронзовый партнер
   logo: /itgm/img/mannivanovferber.gif
 
+- title: A25
+  link: http://a25.ru/
+  desc: 
+  level: Бронзовый партнер
+  logo: /itgm/img/a25.png
+
 - title: Новый партнер
   link: mailto:piterunited@gmail.com
   desc: 
