--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -52,6 +52,12 @@
   level: Серебряный партнер
   logo: /itgm/img/itgrad.png
 
+- title: OSS Prime
+  link: http://ossprime.ru/
+  desc: 
+  level: Бронзовый партнер
+  logo: /itgm/img/ossprime.png
+
 - title: Манн Иванов и Фербер
   link: http://www.mann-ivanov-ferber.ru/
   desc: 
