--- a/_data/itgm4_infopartners.yml
+++ b/_data/itgm4_infopartners.yml
@@ -38,6 +38,11 @@
   desc: 
   logo: /itgm/img/progson.png
 
+- title: ScrumTrek
+  link: http://scrumtrek.ru/
+  desc: 
+  logo: /itgm/img/scrumtrek.png
+
 - title: Новый инфопартнер
   link: mailto:piterunited@gmail.com
   desc: 
