--- a/_data/itgm4_sponsors.yml
+++ b/_data/itgm4_sponsors.yml
@@ -52,6 +52,12 @@
   level: Серебряный партнер
   logo: /itgm/img/itgrad.png
 
+- title: Elance-oDesc
+  link: https://www.odesk.com/
+  desc: 
+  level: Серебряный партнер
+  logo: /itgm/img/odesk.png
+
 - title: OSS Prime
   link: http://ossprime.ru/
   desc: 
